<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">百度HD</string>
    <string name="activity_not_found">未找到应用程序</string>
    <string name="str_browser_select">选择</string>
    <string name="choose_upload">"选择要上传的文件"</string>
    <string name="uploads_disabled">"文件上传功能已停用。"</string>
    <string name="loadSuspendedTitle">"没有网络连接"</string>
    <string name="loadSuspended">"未连接到互联网，因此浏览器无法载入该网页。"</string>
    <string name="ssl_warnings_header">"该网站的安全证书有问题。"</string>
    <string name="ssl_continue">"继续"</string>
    <string name="security_warning">"安全警告"</string>
    <string name="ssl_untrusted">"该证书并非来自可信的授权中心。"</string>
    <string name="ssl_mismatch">"网站的名称与证书上的名称不一致。"</string>
    <string name="ssl_expired">"该证书已过期。"</string>
    <string name="ssl_not_yet_valid">"该证书尚未生效。"</string>
    <string name="browserFrameFormResubmitLabel">"确认"</string>
    <string name="browserFrameFormResubmitMessage">"您尝试查看的网页中包含已经提交的数据（“POSTDATA”）。如果您重新发送这些数据，系统会重复该网页上的表单所执行过的一切操作（如搜索或在线购买）。"</string>
    <string name="about_head_about">关于</string>
    <string name="about_logo_text1">百度客户端 </string>
    <string name="about_logo_text2">版本号：</string>
    <string name="about_product_zhangbai_text">掌上百度</string>
    <string name="about_product_appsearch_text">应用搜索</string>
    <string name="about_product_browser_text">百度HD</string>
    <string name="about_product_inputmethod_text">百度输入法</string>
    <string name="about_check_update">检查更新</string>
    <string name="about_checking">检查中...</string>
    <string name="about_product_title">更多百度产品</string>
    <string name="about_search_title">关于百度客户端（For Android） </string>
    <string name="about_search_content_summary">"百度客户端（For Android)是百度推出的一款方便手机用户随时随地使用百度搜索服务的应用。"</string>
    <string name="about_search_content_seg1">"【覆盖多种搜索方式】"</string>
    <string name="about_search_content_seg2">"智能的全局搜索，支持对网页、本地通讯录、短信、应用程序等内容进行搜索，可直接在搜索结果中打电话、发短信、访问网站等操作，让搜索更快捷和多元化。搜索过程中，自动收录搜索历史、提供搜索建议，方便手机用户更快找到所需。 "</string>
    <string name="about_search_content_seg3">"【导航一键直达】"</string>
    <string name="about_search_content_seg4">"多种导航，一键直达所需信息。"</string>
    <string name="about_search_content_seg5">"【更方便最贴心】"</string>
    <string name="about_search_content_seg6">"桌面小部件精美又方便。常用信息不用搜，天气股票Ding在首页，时刻获取最新动态。"</string>
    <string name="about_search_content_tail">Copyright © 2012 Baidu, Inc.\nAll Rights Reserved.</string>
    <string name="uuid">用户唯一识别码:\n</string>
    <string name="builderVersion">构建版本号：</string>
    <string name="update_toast_already_latest">您的版本已经是最新的了</string>
    <string name="update_toast_bad_net">网络故障,请稍后再试</string>
    <string name="update_checkbox_text">忽略此版本的更新</string>
    <string name="auto_update_dialog_button_update">更新</string>
    <string name="auto_update_dialog_button_later">稍后</string>
    <string name="auto_update_dialog_button_close">关闭</string>
    <string name="positive_update_dialog_button_ok">好</string>
    <string name="positive_update_dialog_button_later">稍后</string>
    <string name="dialog_positive_button_text">确定</string>
    <string name="dialog_nagtive_button_text">取消</string>
    <string name="find_high_package_dialog_title">发现升级包</string>
    <string name="update_finish_title">下载完毕</string>
    <string name="update_unfinish_title">正在下载中...</string>
    <string name="update_finish_message">安装包已经下载完毕,是否立即升级?</string>
    <string name="update_failed_message">解析错误，安装失败。</string>
    <string name="update_error_title">下载中断</string>
    <string name="update_error_message">安装包下载失败，无法升级。</string>
    <string name="update_dialog_close">退出</string>
    <string name="version_update_title">版本更新</string>
    <string name="download_percent">正在下载更新，请稍等…%d</string>
    <string name="download_waiting">等待更新中&#8230;</string>
    <string name="update_progress_cancel">取消</string>
    <string name="update_download_error">更新失败，请检查网络并重试…</string>
    <string name="install_no_file_found">"未找到安装包"</string>
    <string name="accept">接受</string>
    <string name="quit">退出</string>
    <string name="contextmenu_openlink">"打开"</string>
    <string name="contextmenu_savelink">"保存链接"</string>
    <string name="contextmenu_copy">"复制"</string>
    <string name="contextmenu_copylink">"复制链接网址"</string>
    <string name="contextmenu_download_image">"保存图片"</string>
    <string name="contextmenu_view_image">"查看图片"</string>
    <string name="contextmenu_dial_dot">"拨打…"</string>
    <string name="contextmenu_add_contact">"添加联系人"</string>
    <string name="contextmenu_send_mail">"发送电子邮件"</string>
    <string name="contextmenu_map">"地图"</string>
    <string name="no_web_history">暂无浏览记录</string>
    <string name="no_search_history">暂无搜索历史</string>
    <string name="web_clear_history">清空浏览记录</string>
    <string name="web_clear_history_tips">是否清空浏览记录?</string>
    <string name="search_clear_history">清空搜索记录</string>
    <string name="search_clear_history_tips">是否清空搜索记录?</string>
    <string name="search_nohistory_tips">没有搜索历史</string>
    <string name="search_nohistory_privatemode_tips">隐私模式不记录搜索和浏览历史</string>
    <string name="search_close_private_mode">关闭隐私模式</string>
    <string name="search_visit_direct">"访问："</string>
    <string name="search_go">搜索</string>
    <string name="search_cancel">取消</string>
    <string name="search_visit">访问</string>
    <string name="download_title">"下载历史记录"</string>
    <string name="download_no_sdcard_dlg_title">"无 SD 卡"</string>
    <string name="download_no_sdcard_dlg_msg">"需要有 SD 卡才能下载%s。"</string>
    <string name="download_sdcard_busy_dlg_title">"SD 卡不可用"</string>
    <string name="download_sdcard_busy_dlg_msg">"SD 卡正忙。要允许下载，请在通知中选择“关闭 USB 存储”。"</string>
    <string name="download_no_application_title">"无法打开文件"</string>
    <string name="no_downloads">"下载历史记录为空。"</string>
    <string name="download_error">"下载失败"</string>
    <string name="download_success">"下载完成"</string>
    <string name="download_begin">"开始下载"</string>
    <string name="download_running">"正在下载"</string>
    <string name="download_pending">"正在开始下载..."</string>
    <string name="cancel">"取消"</string>
    <string name="ok">"确定"</string>
    <string name="button_queue_for_wifi">"排队"</string>
    <string name="wifi_required_title">"文件太大，不适于通过移动网络下载"</string>
    <string name="wifi_required_body">"您不能从该移动网络下载一个大小为%1$s的文件。下次连接到 Wi-Fi 网络时，可触摸%1$s下载此文件。"</string>
    <string name="wifi_recommended_title">"加入 Wi-Fi 下载队列？"</string>
    <string name="wifi_recommended_body">"从该移动网络下载这个大小为 %1$s的文件可能会耗尽电池电量，还要向运营商支付额外的费用。下次连接到 Wi-Fi 网络时，可触摸%2$s下载此文件。"</string>
    <string name="button_cancel_download">"取消"</string>
    <string name="button_start_now">"立即开始"</string>
    <string name="deselect_all">"清除所选项"</string>
    <string name="download_unknown_title">"&lt;未命名&gt;"</string>
    <string name="notification_need_wifi_for_size">"此大小的文件需要通过 Wi-Fi 下载"</string>
    <string name="notification_filename_separator">", "</string>
    <string name="notification_filename_extras">" 还有 %d 项"</string>
    <string name="notification_download_complete">"下载完成"</string>
    <string name="notification_download_failed">"下载失败"</string>
    <string name="missing_title">"&lt;未知&gt;"</string>
    <string name="download_queued">"已入队列"</string>
    <string name="download_menu_sort_by_size">"按大小排序"</string>
    <string name="download_menu_sort_by_date">"按时间排序"</string>
    <string name="dialog_file_missing_body">"未找到已下载的文件。"</string>
    <string name="dialog_title_queued_body">"文件暂时不可用"</string>
    <string name="dialog_queued_body">"该文件已加入队列，供以后下载。"</string>
    <string name="keep_queued_download">"保留"</string>
    <string name="remove_download">"删除"</string>
    <string name="delete_download">"删除"</string>
    <string name="dialog_file_already_exists">"无法下载，目标文件已存在。"</string>
    <string name="dialog_insufficient_space_on_external">"无法完成下载，存储空间不足。"</string>
    <string name="dialog_insufficient_space_on_cache">"无法完成下载，存储空间不足。"</string>
    <string name="dialog_invalid_on_external">"外部存储器空间不足或者无法使用，转入内部存储器下载。"</string>
    <string name="dialog_media_not_found">"无法下载，未安装外部媒体。"</string>
    <string name="dialog_cannot_resume">"下载中断，无法继续进行。"</string>
    <string name="dialog_failed_body">"该下载失败。"</string>
    <string name="dialog_title_not_available">"文件不可用"</string>
    <string name="retry_download">"重试"</string>
    <string name="cancel_running_download">"取消"</string>
	<string name="cancel_download">"已经取消下载"</string>
    <string name="geolocation_permissions_prompt_message">"%s需要了解您的位置信息"</string>
    <string name="geolocation_permissions_prompt_share">"共享位置信息"</string>
    <string name="geolocation_permissions_prompt_dont_share">"拒绝"</string>
    <string name="geolocation_permissions_prompt_remember">"记住偏好设置"</string>
    <string name="geolocation_permissions_prompt_toast_allowed">"此网站可以访问您所在的地点。</string>
    <string name="geolocation_permissions_prompt_toast_disallowed">"此网站无法访问您所在的地点。</string>
    <string name="voice_start">请说话</string>
    <string name="once">重试</string>
    <string name="voice_search_recognize_fail">无法识别</string>
    <string name="voice_search_connect_fail">未能连接到服务器</string>
    <string name="voice_search_recorder_initialized_fail">语音初始化失败</string>
    <string name="voice_nodifying">正在识别</string>
    <string name="voice_end_speak">完毕</string>
    <string name="voice_search_poweredby">Powered by 百度HD</string>
    <string name="preference">设置</string>
    <string name="private_setting">隐私设置</string>
    <string name="clear_cookies">清除访问cookies</string>
    <string name="clear_search_history">清除搜索历史</string>
    <string name="open_private_mode">隐私模式</string>
    <string name="suggestion_open_private_mode">开启隐私模式</string>
    <string name="local_search_setting">本地搜索设置</string>
    <string name="change_home_bg_setting">更改壁纸</string>
    <string name="change_home_bg">更改壁纸</string>
    <string name="about_baidu_search_seeting">@string/about_head_about</string>
    <string name="delete">删除</string>
    <string name="delete_all">清空</string>
    <string name="confirm_clean_play_history">确定清除最近播放历史?</string>
    <string name="confirm_clean_search_history">确定清除搜索历史?</string>
    <string name="confirm_clean_visit_cookies">确定清除访问cookies?</string>
    <string name="confirm_clean">确认</string>
    <string name="cancel_clean">取消</string>
    <string name="changebg__activity_name">桌面壁纸</string>
    <string name="finish_clean_search_history">已清空搜索历史</string>
    <string name="finish_clean_visit_cookies">已清空访问cookies</string>
    <string name="settings_download">下载管理</string>
    <string name="settings_changebg_success">已成功更换背景图片</string>
    <string name="privacy_setting_footer_prompt">隐私模式下，搜索的关键词将不再保留</string>
    <string name="select_local_picture">选择本地图片</string>
    <string name="feedback_setting">用户反馈</string>
    <string name="help">帮助</string>
    <string name="settting_bookmarks_sync">同步掌上百度书签</string>
    <string name="exit">退出</string>
    <string name="addSuccess">添加成功</string>
    <string name="deleteBookmark">取消书签</string>
    <string name="addBookmark">添加书签成功</string>
    <string name="shortcut_add_dialog_title">在桌面添加百度快捷方式？</string>
    <string name="shortcut_add_dialog_ok">确认</string>
    <string name="shortcut_add_dialog_cancel">取消</string>
    <string name="suggestion_item_description">description</string>
    <string name="webview_error_retry_button">重试</string>
    <string name="webview_error_back_button">返回</string>
    <string name="webview_error_file_not_found">要访问的页面不存在</string>
    <string name="webview_error_fail_connection">未能连接到服务器</string>
    <string name="app_auto_download_dialog_title">下载</string>
    <string name="app_auto_download_dialog_ok">确定</string>
    <string name="app_auto_download_dialog_cancel">取消</string>
    <string name="personal_buffer">缓存</string>
    <string name="personal_local">本地</string>
    <string name="personal_favorite">收藏</string>
    <string name="personal_history">历史</string>
    <string name="bookmark">书签</string>
    <string name="tab_history">历史</string>
</resources>