<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  style="about_padding_vertical">
  	<TextView 
    	android:text="@string/about_search_content_summary"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/about_margin_horizontal"
    	android:layout_marginRight="@dimen/about_margin_horizontal"
    	android:layout_marginTop="@dimen/about_margin_vertical"
    	android:lineSpacingExtra="12dip"    
		android:lineSpacingMultiplier="1"	
    	style="@style/about_content_bold"
    />
<!--     <TextView 
    	android:text="@string/about_search_content_summary2"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/about_margin_horizontal"
    	android:layout_marginRight="@dimen/about_margin_horizontal"
		android:lineSpacingExtra="12dip"    
		android:lineSpacingMultiplier="1"
    	style="@style/about_content_bold"
    /> -->
    <TextView 
    	android:text="@string/about_search_content_seg1"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/about_margin_horizontal"
    	android:layout_marginRight="@dimen/about_margin_horizontal"
    	android:lineSpacingExtra="12dip"    
		android:lineSpacingMultiplier="1"
    	style="@style/about_content_bold"
    />
    <TextView 
    	android:text="@string/about_search_content_seg2"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/about_margin_horizontal"
    	android:layout_marginRight="@dimen/about_margin_horizontal"
    	android:lineSpacingExtra="12dip"    
		android:lineSpacingMultiplier="1"
    	style="@style/about_content_bold"
    />
<!--     <TextView 
    	android:text="@string/about_search_content_seg21"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/about_margin_horizontal"
    	android:layout_marginRight="@dimen/about_margin_horizontal"
    	android:lineSpacingExtra="12dip"    
		android:lineSpacingMultiplier="1"
    	style="@style/about_content_bold"
    />
    <TextView 
    	android:text="@string/about_search_content_seg22"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/about_margin_horizontal"
    	android:layout_marginRight="@dimen/about_margin_horizontal"
    	android:lineSpacingExtra="12dip"    
		android:lineSpacingMultiplier="1"
    	style="@style/about_content_bold"
    />
    <TextView 
    	android:text="@string/about_search_content_seg23"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/about_margin_horizontal"
    	android:layout_marginRight="@dimen/about_margin_horizontal"
    	android:lineSpacingExtra="12dip"    
		android:lineSpacingMultiplier="1"
    	style="@style/about_content_bold"
    />
    <TextView 
    	android:text="@string/about_search_content_seg24"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/about_margin_horizontal"
    	android:layout_marginRight="@dimen/about_margin_horizontal"
    	android:lineSpacingExtra="12dip"    
		android:lineSpacingMultiplier="1"
    	style="@style/about_content_bold"
    />
    <TextView 
    	android:text="@string/about_search_content_seg25"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/about_margin_horizontal"
    	android:layout_marginRight="@dimen/about_margin_horizontal"
    	android:lineSpacingExtra="12dip"    
		android:lineSpacingMultiplier="1"
    	style="@style/about_content_bold"
    />
    <TextView 
        android:text="@string/about_search_content_seg26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/about_margin_horizontal"
        android:layout_marginRight="@dimen/about_margin_horizontal"
        android:lineSpacingExtra="12dip"    
		android:lineSpacingMultiplier="1"
        style="@style/about_content_bold"
    /> -->
    <TextView 
    	android:text="@string/about_search_content_seg3"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/about_margin_horizontal"
    	android:layout_marginRight="@dimen/about_margin_horizontal"
    	android:lineSpacingExtra="12dip"    
		android:lineSpacingMultiplier="1"
    	style="@style/about_content_bold"
    />
    <TextView 
    	android:text="@string/about_search_content_seg4"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/about_margin_horizontal"
    	android:layout_marginRight="@dimen/about_margin_horizontal"
    	android:lineSpacingExtra="12dip"    
		android:lineSpacingMultiplier="1"
    	style="@style/about_content_bold"
    />
    <TextView 
        android:text="@string/about_search_content_seg5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/about_margin_horizontal"
        android:layout_marginRight="@dimen/about_margin_horizontal"
        android:lineSpacingExtra="12dip"    
        android:lineSpacingMultiplier="1"
        style="@style/about_content_bold"
    />
    <TextView 
        android:text="@string/about_search_content_seg6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/about_margin_horizontal"
        android:layout_marginRight="@dimen/about_margin_horizontal"
        android:lineSpacingExtra="12dip"    
        android:lineSpacingMultiplier="1"
        style="@style/about_content_bold"
    />
<!--     <TextView 
    	android:text="@string/about_search_content_seg41"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/about_margin_horizontal"
    	android:layout_marginRight="@dimen/about_margin_horizontal"
    	android:lineSpacingExtra="12dip"    
		android:lineSpacingMultiplier="1"
    	style="@style/about_content_bold"
    />
    <TextView 
        android:text="@string/about_search_content_seg42"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/about_margin_horizontal"
        android:layout_marginRight="@dimen/about_margin_horizontal"
        android:lineSpacingExtra="12dip"    
		android:lineSpacingMultiplier="1"
        style="@style/about_content_bold"
    /> -->
    <TextView 
        android:id="@+id/builderVersion"
    	android:text="@string/builderVersion"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/about_margin_horizontal"
    	android:layout_marginRight="@dimen/about_margin_horizontal"
    	android:textColor="@android:color/darker_gray"
    />
        
    <TextView 
        android:id="@+id/uuid"
    	android:text="@string/uuid"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/about_margin_horizontal"
    	android:layout_marginRight="@dimen/about_margin_horizontal"
    	android:layout_marginTop="@dimen/about_margin_vertical"
    	android:textColor="@android:color/darker_gray"
    />
    
    <TextView 
    	android:text="@string/about_search_content_tail"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center_horizontal"
    	android:layout_marginLeft="@dimen/about_margin_horizontal"
    	android:layout_marginRight="@dimen/about_margin_horizontal"
    	android:layout_marginTop="@dimen/about_margin_vertical"
    	android:layout_marginBottom="@dimen/about_margin_vertical"
    	android:textColor="@android:color/darker_gray"
    />
</LinearLayout>
