<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	
	<TextView android:id="@+id/about_product_zhangbai"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="13dip"
	    android:paddingBottom="13dip"
	    android:background="@drawable/null_drawable"
	    android:text="@string/about_product_zhangbai_text"
	    android:textColor="#333333"
	    android:textSize="13sp"
	    android:drawablePadding="10dip"
	    android:gravity="center_horizontal"
	    android:paddingLeft="23dip"
	    />
	
	<TextView android:id="@+id/about_product_appsearch"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@id/about_product_zhangbai"
	    android:layout_marginTop="13dip"
	    android:layout_marginBottom="13dip"
	    android:background="@drawable/null_drawable"
	    android:text="@string/about_product_appsearch_text"
	    android:textColor="#333333"
	    android:textSize="13sp"
	    android:drawablePadding="10dip"
	    android:paddingLeft="19dip"
	    android:paddingBottom="13dip"
	    />
	
	<TextView android:id="@+id/about_product_browser"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/about_product_appsearch"
	    android:layout_marginTop="13dip"
	    android:layout_marginBottom="13dip"
	    android:background="@drawable/null_drawable"
	    android:text="@string/about_product_browser_text"
	    android:textColor="#333333"
	    android:textSize="13sp"
	    android:drawablePadding="10dip"
	    android:paddingLeft="11dip"
	    android:paddingBottom="13dip"
	    />
<!--  	
	<TextView android:id="@+id/about_product_map"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@id/about_product_browser"
	    android:layout_marginTop="13dip"
	    android:layout_marginBottom="13dip"
	    android:background="@drawable/null_drawable"
	    android:text="@string/about_product_map_text"
	    android:textColor="#333333"
	    android:textSize="12sp"
	    android:drawablePadding="10dip"
	    android:paddingLeft="4dip"
	    android:paddingBottom="13dip"
	    />
-->	
	<TextView android:id="@+id/about_product_inputmethod"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@id/about_product_browser"
	    android:layout_marginTop="13dip"
	    android:layout_marginBottom="13dip"
	    android:background="@drawable/null_drawable"
	    android:text="@string/about_product_inputmethod_text"
	    android:textColor="#333333"
	    android:textSize="13sp"
	    android:drawablePadding="10dip"
	    android:paddingLeft="2dip"
	    android:singleLine="true"
	    android:ellipsize="end"
	    android:paddingBottom="13dip"
	    />
	
</RelativeLayout>
